# neko

./: .dockerignore  .gitattributes  .gitignore  .gorelease.yaml  .goreleaser.yaml  Cargo.toml  Dockerfile  Dockerfile.ubuntu  Makefile  README.md  config.example.yaml  flake.nix  go.mod  go.sum
.gitea/workflows/: build.yaml  release-binary.yaml  release-container.yaml  release-image.yaml  release.yaml
alpine/: neko
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
cmd/neko/: config.go  create_notifier.go  create_probe.go  main.go  metrics.go  version.go
cmd/server/: config.go  create_notifier.go  create_probe.go  main.go  monitor.go
docs/examples/: check_smbclient.sh
package/openrc/: neko
package/systemd/: neko.service
pkg/core/: dp.go  result.go  status.go
pkg/notifier/: discord_webhook.go  gotify.go  notifier.go  smtp.go
pkg/probe/: dns.go  docker.go  domain.go  exec.go  group.go  http.go  http_test.go  ping.go  ping_test.go  probe.go  smb.go  sql.go  sql_test.go  ssh.go  ssh_test.go  test.go
pkg/secret/: file.go  kubernetes.go  secret.go  static.go
pkg/store/: raft.go  store.go
src/: config.rs  core.rs  main.rs  metrics.rs  monitor.rs  notifier.rs  probe.rs
